<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Bandit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to Word Bandit!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick Match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to Word Bandit! Sign in.</string>
    <string name="check_games">Saved Games</string>
    <string name="start_match">New Game</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="share_email_native">email native</string>
    <string name="share_email_subject">email subject</string>
    <string name="share_chooser_text">chooser text</string>
    <string name="share_twitter">twitter post</string>
    <string name="share_facebook">facebook post</string>
    <string name="share_sms">sms post</string>
    <string name="share_email_gmail">gmail post</string>

</resources>
