<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/matchup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_to_our_skeleton_app_" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"></com.google.android.gms.common.SignInButton>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/secret_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/gImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Welcome, "
                android:textSize="20dp" />

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text=""
                android:textSize="20dp" />


        </LinearLayout>


        <Button
            android:id="@+id/startMatchButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/button_menu"
            android:text="@string/start_match" />

        <Button
            android:id="@+id/checkGamesButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_menu"
            android:text="@string/check_games" />

        <Button
            android:id="@+id/rulesButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_menu"
            android:text="How To Play" />

        <Button
            android:id="@+id/quickMatchButon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_menu"
            android:text="@string/quick_match"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="#dd4b39"
            android:text="@string/sign_out"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="Click the 'New Game' button and:"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1. Play against friends in your Google+ circles.\n2. Use the search icon to search for any player.\n3. Turn on 'Nearby Players' to play someone nearby."
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progressLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:visibility="gone"
      >

        <TextView
            android:id="@+id/progress_dialog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Loading..."
            android:textSize="30dp"
            android:layout_marginBottom="40dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/progress_dialog2"
            android:src="@drawable/game_icon" />
    </RelativeLayout>
</RelativeLayout>

