<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_to_our_skeleton_app_" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"></com.google.android.gms.common.SignInButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleShare"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:visibility="gone"></android.support.v7.widget.RecyclerView>

        <!-- I made the fragment countdown visibility gone in this xml
        and also in its own xml-->

        <LinearLayout
            android:id="@+id/fragment_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"></LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"></LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_dynamic_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"></LinearLayout>

        <LinearLayout
            android:id="@+id/gLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/fragment_google1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_google2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/fragment_listview1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/split_line"
                android:orientation="vertical"></LinearLayout>


            <LinearLayout
                android:id="@+id/fragment_listview2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/split_line"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_steal_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:orientation="vertical"></LinearLayout>
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:visibility="gone"
            >
        <Button
            android:id="@+id/doneButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="completeYouTurn"
            android:text="@string/done"
            android:textSize="15sp"
            android:background="@drawable/button"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="onCancelClicked"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:background="@drawable/button"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/leaveButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="onLeaveClicked"
            android:text="@string/leave"
            android:textSize="15sp"
            android:background="@drawable/button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/finishButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:onClick="onFinishClicked"
            android:text="@string/finish"
            android:textSize="15sp"
            android:background="@drawable/button"
            android:layout_weight="1"/>
        </LinearLayout>
       -->

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/gImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="Welcome, "
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/name_field"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20dp" />


            </LinearLayout>


            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@drawable/button_menu"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_menu"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/rulesButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_menu"
                android:text="How To Play" />

            <Button
                android:id="@+id/quickMatchButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/button_menu"
                android:onClick="onQuickMatchClicked"
                android:text="@string/quick_match"
                android:visibility="gone" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:background="#dd4b39"
                android:text="@string/sign_out"
                android:textColor="#ffffff" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</LinearLayout>